; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_alloc_name.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/ipc/extr_ipc_port.c_ipc_port_alloc_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IOT_PORT = common dso_local global i32 0, align 4
@MACH_PORT_TYPE_RECEIVE = common dso_local global i32 0, align 4
@KERN_SUCCESS = common dso_local global i64 0, align 8
@IP_CALLSTACK_MAX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ipc_port_alloc_name(i32 %0, i32 %1, i64* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64* %2, i64** %7, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* @IOT_PORT, align 4
  %12 = load i32, i32* @MACH_PORT_TYPE_RECEIVE, align 4
  %13 = load i32, i32* %6, align 4
  %14 = bitcast i64* %8 to i32*
  %15 = call i64 @ipc_object_alloc_name(i32 %10, i32 %11, i32 %12, i32 0, i32 %13, i32* %14)
  store i64 %15, i64* %9, align 8
  %16 = load i64, i64* %9, align 8
  %17 = load i64, i64* @KERN_SUCCESS, align 8
  %18 = icmp ne i64 %16, %17
  br i1 %18, label %19, label %21

19:                                               ; preds = %3
  %20 = load i64, i64* %9, align 8
  store i64 %20, i64* %4, align 8
  br label %29

21:                                               ; preds = %3
  %22 = load i64, i64* %8, align 8
  %23 = load i32, i32* %5, align 4
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @ipc_port_init(i64 %22, i32 %23, i32 %24)
  %26 = load i64, i64* %8, align 8
  %27 = load i64*, i64** %7, align 8
  store i64 %26, i64* %27, align 8
  %28 = load i64, i64* @KERN_SUCCESS, align 8
  store i64 %28, i64* %4, align 8
  br label %29

29:                                               ; preds = %21, %19
  %30 = load i64, i64* %4, align 8
  ret i64 %30
}

declare dso_local i64 @ipc_object_alloc_name(i32, i32, i32, i32, i32, i32*) #1

declare dso_local i32 @ipc_port_init(i64, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
